--- a/database_schema.Rmd
+++ b/database_schema.Rmd
@@ -37,7 +37,7 @@ CREATE TABLE CUSTOMER (
 ```{sql connection=connect}
 CREATE TABLE ADDRESS (
   postcode VARCHAR(20) PRIMARY KEY, 
-  customer_id INT NOT NULL,
+  customer_id VARCHAR(50) NOT NULL,
   street VARCHAR(50) NOT NULL,
   city VARCHAR(100) NOT NULL,
   country VARCHAR(100) NOT NULL,
