--- a/database_schema.Rmd
+++ b/database_schema.Rmd
@@ -19,6 +19,19 @@ library(RSQLite)
 connect <- dbConnect(RSQLite::SQLite(), "database.db")
 ```
 
+## Create ADDRESS Table
+
+```{sql connection=connect}
+CREATE TABLE ADDRESS (
+  address_id VARCHAR(50) PRIMARY KEY, 
+  customer_id VARCHAR(50) NOT NULL,
+  postcode VARCHAR(20) NOT NULL, 
+  street VARCHAR(50) NOT NULL,
+  city VARCHAR(100) NOT NULL,
+  country VARCHAR(100) NOT NULL
+  );
+```
+
 ## Create CUSTOMER Table
 
 ```{sql connection=connect}
@@ -29,10 +42,8 @@ CREATE TABLE CUSTOMER (
   gender VARCHAR(10),
   customer_email VARCHAR(50) NOT NULL UNIQUE,
   customer_mobile VARCHAR(15) NOT NULL UNIQUE,
-  postcode VARCHAR(20), 
-  street VARCHAR(50) NOT NULL,
-  city VARCHAR(100) NOT NULL,
-  country VARCHAR(100) NOT NULL
+  address_id VARCHAR(50) NOT NULL,
+  FOREIGN KEY (address_id) REFERENCES ADDRESS (address_id)
 );
 ```
 
