--- a/database_schema.Rmd
+++ b/database_schema.Rmd
@@ -22,7 +22,7 @@ connect <- dbConnect(RSQLite::SQLite(), "database.db")
 ## Create ADDRESS Table
 
 ```{sql connection=connect}
-CREATE TABLE ADDRESS (
+CREATE TABLE IF NOT EXISTS ADDRESS (
   address_id VARCHAR(50) PRIMARY KEY, 
   customer_id VARCHAR(50) NOT NULL,
   postcode VARCHAR(20) NOT NULL, 
@@ -35,7 +35,7 @@ CREATE TABLE ADDRESS (
 ## Create CUSTOMER Table
 
 ```{sql connection=connect}
-CREATE TABLE CUSTOMER (
+CREATE TABLE IF NOT EXISTS CUSTOMER (
   customer_id VARCHAR(50) PRIMARY KEY, 
   first_name VARCHAR(50) NOT NULL,
   last_name VARCHAR(50) NOT NULL,
@@ -50,7 +50,7 @@ CREATE TABLE CUSTOMER (
 ## Create PRODUCT table
 
 ```{sql connection=connect}
-CREATE TABLE PRODUCT (
+CREATE TABLE IF NOT EXISTS PRODUCT (
   product_id VARCHAR(50) PRIMARY KEY, 
   product_name VARCHAR(50) NOT NULL,
   product_description VARCHAR(50),
@@ -68,7 +68,7 @@ CREATE TABLE PRODUCT (
 ## Create DISCOUNT table
 
 ```{sql connection=connect}
-CREATE TABLE DISCOUNT (
+CREATE TABLE IF NOT EXISTS DISCOUNT (
   promo_code VARCHAR(20) PRIMARY KEY, 
   discount_amount INT NOT NULL
 );
@@ -77,7 +77,7 @@ CREATE TABLE DISCOUNT (
 ## Create ORDER table for CUSTOMER-PRODUCT relationship
 
 ```{sql connection=connect}
-CREATE TABLE ORDER_ITEM (
+CREATE TABLE IF NOT EXISTS ORDER_ITEM (
   order_id VARCHAR(50),
   product_id VARCHAR(50),
   order_quantity INT NOT NULL,
@@ -88,7 +88,7 @@ CREATE TABLE ORDER_ITEM (
 ```
 
 ```{sql connection=connect}
-CREATE TABLE ORDER_DETAIL (
+CREATE TABLE IF NOT EXISTS ORDER_DETAIL (
   order_id VARCHAR(50) PRIMARY KEY,
   customer_id VARCHAR(50), 
   order_date DATE NOT NULL,
@@ -103,7 +103,7 @@ CREATE TABLE ORDER_DETAIL (
 ## Create ADVERTISEMENT table
 
 ```{sql connection=connect}
-CREATE TABLE ADVERTISEMENT (
+CREATE TABLE IF NOT EXISTS ADVERTISEMENT (
   ad_id VARCHAR(50) PRIMARY KEY, 
   ad_frequency INT NOT NULL,
   ad_place VARCHAR(50) NOT NULL,
@@ -114,7 +114,7 @@ CREATE TABLE ADVERTISEMENT (
 ## Create ADVERTISE_IN table for PRODUCT-ADVERTISEMENT relationship
 
 ```{sql connection=connect}
-CREATE TABLE ADVERTISE_IN (
+CREATE TABLE IF NOT EXISTS ADVERTISE_IN (
   product_id VARCHAR(50),
   ad_id VARCHAR(50),
   PRIMARY KEY (product_id, ad_id),
@@ -126,7 +126,7 @@ CREATE TABLE ADVERTISE_IN (
 ## Create SUPPLIER table
 
 ```{sql connection=connect}
-CREATE TABLE SUPPLIER (
+CREATE TABLE IF NOT EXISTS SUPPLIER (
   supplier_id VARCHAR(50) PRIMARY KEY, 
   supplier_name VARCHAR(50) NOT NULL,
   supplier_email VARCHAR(50) NOT NULL,
@@ -137,7 +137,7 @@ CREATE TABLE SUPPLIER (
 ## Create CATEGORY table
 
 ```{sql connection=connect}
-CREATE TABLE CATEGORY (
+CREATE TABLE IF NOT EXISTS CATEGORY (
   category_id VARCHAR(50) PRIMARY KEY, 
   category_name VARCHAR(50) NOT NULL,
   category_fee INT NOT NULL
