--- a/data_validation_and_load.Rmd
+++ b/data_validation_and_load.Rmd
@@ -34,7 +34,7 @@ advertise_in <- readr::read_csv("data_upload/ADVERTISE_IN.csv")
 # List of tables and their corresponding primary key columns
 table_pk <- list(
   customer = "customer_id",
-  address = "postcode",
+  address = "address_id",
   category = "category_id",
   supplier = "supplier_id",
   product = "product_id",
@@ -73,6 +73,9 @@ invalid_customer_email <- customer[!grepl("^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[
 #Check format of mobile number (+xx xxx xxx xxxx)
 invalid_customer_mobile <- customer[!grepl("^\\+\\d{1,3}\\s[0-9]{3}\\s[0-9]{3}\\s[0-9]{4}$", customer$customer_mobile), c("customer_id", "customer_mobile")]
 
+#Check if address_id exists in the ADDRESS table
+invalid_address_fk <- customer[!customer$address_id %in% address$address_id, c("customer_id", "address_id")]
+
 #Check for missing data
 na_customer_customer_id <- customer[is.na(customer$customer_id), "customer_id"]
 na_customer_first_name <- customer[is.na(customer$first_name), c("customer_id", "first_name")]
@@ -85,6 +88,7 @@ bad_customer_record <- unique(c(invalid_customer_firstname$customer_id,
                                 invalid_customer_lastname$customer_id, 
                                 invalid_customer_email$customer_id, 
                                 invalid_customer_mobile$customer_id,
+                                invalid_address_fk$customer_id,
                                 na_customer_customer_id$customer_id,
                                 na_customer_first_name$customer_id,
                                 na_customer_last_name$customer_id,
@@ -98,21 +102,19 @@ customer <- customer[!(customer$customer_id %in% bad_customer_record), ]
 
 ```{r}
 #Check for missing data
-na_address_postcode <- address[is.na(address$postcode), "postcode"]
-na_address_street <- address[is.na(address$street), c("postcode", "street")]
-na_address_city <- address[is.na(address$city), c("postcode", "city")]
-na_address_country <- address[is.na(address$country), c("postcode", "country")]
-
-#Check if customer_id exists in the CUSTOMER table
-invalid_customer_fk <- address[!address$customer_id %in% customer$customer_id, c("postcode", "customer_id")]
+na_address_address_id <- address[is.na(address$address_id), "address_id"]
+na_address_postcode <- address[is.na(address$postcode), c("address_id", "postcode")]
+na_address_street <- address[is.na(address$street), c("address_id", "street")]
+na_address_city <- address[is.na(address$city), c("address_id", "city")]
+na_address_country <- address[is.na(address$country), c("address_id", "country")]
 
 #Remove unclean data
-bad_address_record <- unique(c(na_address_postcode$postcode,
-                               na_address_street$postcode,
-                               na_address_city$postcode,
-                               na_address_country$postcode,
-                               invalid_customer_fk$postcode))
-address <- address[!(address$postcode %in% bad_address_record), ]
+bad_address_record <- unique(c(na_address_address_id$address_id,
+                               na_address_postcode$address_id,
+                               na_address_street$address_id,
+                               na_address_city$address_id,
+                               na_address_country$address_id))
+address <- address[!(address$address_id %in% bad_address_record), ]
 
 
 ```
