--- a/Report.qmd
+++ b/Report.qmd
@@ -42,7 +42,37 @@ As a result, this is our E-R diagram.
 
 ### Task 1.2: SQL Database Schema Creation
 
-#### Logical Schema
+#### Normalization:
+
+According to our first draft of the E-R diagram, two main adjustments were made in order to comply with 3NF
+
+The first adjustment was on the ORDER table. After reviewing the order of normal forms, it was found that the ORDER entity still did not comply with 3NF.
+
+Functional Dependency:
+
+{order_id, customer_id, product_id } -\> { order_date , order_status, order_quantity, promo_code, discount amount, payment_method, delivery_fee}
+
+{promo_code} -\> { discount_amount}
+
+As we assumed that order_id could be duplicated to represent products ordered by the same customer simultaneously, there would be UPDATE anomalies. If there is an update on any attributes, such as payment_methods, we must alter more than one row in case there is more than one product in that order_id. In addition, discount_amount is also transitively dependent on promo_code.
+
+Therefore, we separated the ORDER table into three entities including:
+
+1.  ORDER_DETAIL is similar to the ORDER table but has fewer attributes to contain each order's details. It has product_id as a primary key, customer_id and promo_code as foreign keys, and other attributes like order_date, order_status, and payment_method.
+2.  ORDER_ITEM contains product IDs and the quantities ordered in each order. The table has order_id and product_id as foreign keys and a composite primary key, and quantity as another attribute.
+3.  DISCOUNT is created to store the data of available promotional discounts, which consists of promo_code as a primary key and discount_amount.
+
+The next adjustment was on the CUSTOMER table, which was initially on 2NF. Based on its function dependency, street, city, and country can also be determined by postcode and customer_id.
+
+Functional Dependency:
+
+{customer_id} -\>{ first_name , last_name , gender , email, mobile_no , street , city , country , postcode } {postcode} -\> { street, city , country }
+
+This indicated that street, city, and country were transitively dependent on postcode. As a result, a new table is created as ADDRESS, which has postcode as a primary key and stores street, city, and country as other attributes.
+
+In summary, four new entities were created from the Normalisation, which were ORDER_DETAIL, ORDER_ITEM, DISCOUNT, and ADDRESS.
+
+#### Logical Schema \<update\>
 
 According to the E-R diagram, we can list logical schema as follows:
 
@@ -56,7 +86,7 @@ According to the E-R diagram, we can list logical schema as follows:
 
 -   CATEGORY([category_id,]{.underline} category_name, category_fee)
 
-#### Physical Schema
+#### Physical Schema \<update\>
 
 ```{r, echo=FALSE}
 
@@ -208,24 +238,6 @@ We also created new entities that are from many-to-many relationships, including
       FOREIGN KEY (ad_id) REFERENCES ADVERTISEMENTS (ad_id)
     );
     ```
-
-#### Normalization:
-
-According to our first draft of the E-R diagram, two main adjustments were made in order to comply with 3NF
-
-The first adjustment was on the ORDER table. After reviewing the order of normal forms, it was found that the ORDER entity still did not comply with 3NF.
-
-{order_id, customer_id, product_id } -\> { order_date , order_status, order_quantity, promo_code, discount amount, payment_method, delivery_fee}
-
-{promo_code} -\> { discount_amount}
-
-As we assumed that order_id could be duplicated to represent products ordered by the same customer simultaneously, there would be UPDATE anomalies. If there is an update on any attributes, such as payment_methods, we must alter more than one row in case there is more than one product in that order_id.
-
-The next adjustment was on the CUSTOMER table, which was initially on 2NF. Based on its function dependency, street, city, and country can also be determined by postcode and customer_id.
-
-{customer_id} -\>{ first_name , last_name , gender , email, mobile_no , street , city , country , postcode } {postcode} -\> { street, city , country }
-
-This indicated that street, city, and country were transitively dependent on postcode. As a result, a new table is created as ADDRESS, which has postcode as a primary key and store street, city, and country as other attributes.
 
 ## Part 2: Data Generation and Implementation
 
@@ -590,9 +602,37 @@ The imported data sets were validated before being added to the database to ensu
 
 ## Part 3: Data Pipeline Generation
 
-### Task 3.1: Synthetic Data Generation
+There are two common workflows for data integration: ELT(Extract, Load, Transform) and ETL (Extract, Transform, Load)
 
-### Task 3.2: GitHub Actions for Continuous Integration
+The major difference between ELT and ETL is that in the ELT stage, normalization is performed after the datasets are imported into the database. In the ETL stage, any normalization and transformation of the data is done before it is loaded into the database.
+
+In our work, we chose ETL (Extract, Transform, Load) instead of ELT as our workflow and used SQL and R interchangeably to perform transformations. This is because we have found that ETL workflow is more suitable for small data sets, so we thought that it would be more compromised with our work.
+
+### Task 3.1: GitHub Repository and Workflow Setup
+
+We first created a new public repository on GitHub and created the following files:
+
+1.  README file to include all student ID numbers for our group.
+2.  database_schema file as a rmd. file to contain r code for creating a database and building the database schema.
+3.  data_validation_and_load file as a rmd. file to create code for validating data and loading the cleaned data into the database.
+4.  data_visualization file to perform data analysis and visualise essential results.
+5.  There are three folders, including data_upload to store 10 datasets generated by Mockaroo, images to store images attached to the quarto report, and figures to store figures generated by data visualization.
+6.  Report as a qmd. file to report the tasks and how they were done.
+
+Secondly, we create a new project in RStudio and connect it to Git for version control to manage code in a local development environment, leading to easier tracking of changes, creating branches, merging code, etc.
+
+GitHub Actions can automate workflows, such as running tests, building, and deploying tasks after pushing code, which can improve development efficiency and ensure code stability. Therefore, we created the .github/workflows directory and an **etl.yaml** file within it.
+
+### Task 3.2: Data Import and Quality Assurance
+
+Our GitHub Actions workflow was designed to execute a task named "ETL workflow for group 3.", triggering by push events to the ‘main’ branch. In this part, we defined a sequence of steps to be executed on the latest version of Ubuntu:
+
+1.  Checkout code: fetch the repository's code.
+2.  Set up the R environment and specify the R version as '4.3.3'.
+3.  Cache R packages: Caches R packages to avoid reinstalling them on each run.
+4.  Install packages: Installs required packages if the cache misses.
+5.  Execute RMD files: Executes for data loading tasks.
+6.  Push changes: utilizes an authentication token to push changes to the ‘main’ branch.
 
 ## Part 4: Data Analysis and Reporting with Quarto in R
 
