--- a/data_analysis.Rmd
+++ b/data_analysis.Rmd
@@ -172,16 +172,11 @@ print(avg_rating_by_category)
 # Add a cumulative sum of Average_Rating to calculate position for labels
 avg_rating_by_category <- avg_rating_by_category[order(-avg_rating_by_category$Average_Rating), ]
 
-# Define your custom color palette
-custom_colors <- c("#1f77b4", "#ff7f0e", "#2ca02c", "#d62728", "#9467bd", "#8c564b")
-
-ggplot(avg_rating_by_category, aes(x = Average_Rating, y = reorder(category_name, Average_Rating), fill = category_name)) +
-  geom_bar(stat = "identity", color = "white") +
+ggplot(avg_rating_by_category, aes(x = Average_Rating, y = reorder(category_name, Average_Rating))) +
+  geom_bar(stat = "identity", color = "white", fill = ifelse(avg_rating_by_category$Average_Rating < 4, "#FFCC80", "#C8E6C9")) +
   geom_text(aes(label = sprintf("%.2f", Average_Rating), x = Average_Rating, y = category_name), 
             color = "black", size = 4, hjust = 2) +
-  scale_fill_manual(values = custom_colors) +
-  labs(fill = "Category Name",
-       title = "Average Rating by Category") +
+  labs(title = "Average Rating for Each Category") +
   theme_minimal() +
   theme(axis.line = element_blank(),
         axis.text = element_text(size = 9),
@@ -189,7 +184,6 @@ ggplot(avg_rating_by_category, aes(x = Average_Rating, y = reorder(category_name
         axis.title = element_blank(),
         panel.grid = element_blank(),
         plot.title = element_text(hjust = 0.5))
-
 ```
 
 ```{r}
@@ -243,3 +237,14 @@ ggplot2 <- ggplot(top_5_revenue_per_region, aes(x = reorder(city, -rev), y = rev
 
 grid.arrange(ggplot1,ggplot2,nrow(1))
 ```
+
+```{r} 
+#Calculating Marketplace fee
+merged_product_fee <- product %>%
+  inner_join(select(category, category_fee), by = "category_id")
+order_fee <- order %>%
+  inner_join(select(order, category_fee), by = "product_id"
+             
+```
+
+
