--- a/Report.qmd
+++ b/Report.qmd
@@ -24,7 +24,7 @@ Our E-R Diagram for an E-commerce database consisted of seven main entities:
 4.  SUPPLIER: Represents details of entities providing products to businesses or customers, including attributes such as supplier ID, supplier name, and contact information. 
 5.  CATEGORY: Represents product classifications or groupings, including attributes such as category unique ID, name, and fee amount as a percentage.
 
-#### Relationships + \<paste relationship set\>
+#### Relationships + \<paste relationship set>
 
 The relationships among these entities are as follows: 
 
@@ -32,7 +32,7 @@ The relationships among these entities are as follows: 
 
     The relationship is shown as ORDER, representing a customer placing an order to purchase products. It also contains some attributes to store the details of each order, including order ID, order date, order status, order quantity, promo code, payment method, and delivery fee.
 
--   **\<?????\>**PRODUCT has a self-referencing relationship of 1 to many. The relationship is shown as Sold_Together, indicating that one product can be sold together with others as a bundle.
+-   **\<?????>**PRODUCT has a self-referencing relationship of 1 to many. The relationship is shown as Sold_Together, indicating that one product can be sold together with others as a bundle.
 
 -   PRODUCT and ADVERTISEMENT have an M-N relationship. This relationship is shown as ADVERTIIE_IN to reflect products presented in the advertisements, meaning multiple advertisements can promote one product, and one advertisement can promote multiple products. 
 
@@ -54,9 +54,9 @@ The first adjustment was on the ORDER table. After reviewing the order of normal
 
 Functional Dependency:
 
-{order_id, customer_id, product_id } -\> { order_date , order_status, order_quantity, promo_code, discount amount, payment_method, delivery_fee}
+{order_id, customer_id, product_id } -> { order_date , order_status, order_quantity, promo_code, discount amount, payment_method, delivery_fee}
 
-{promo_code} -\> { discount_amount}
+{promo_code} -> { discount_amount}
 
 As we assumed that order_id could be duplicated to represent products ordered by the same customer simultaneously, there would be UPDATE anomalies. If there is an update on any attributes, such as payment_methods, we must alter more than one row in case there is more than one product in that order_id. In addition, discount_amount is also transitively dependent on promo_code.
 
@@ -70,29 +70,29 @@ The next adjustment was on the CUSTOMER table, which was initially on 2NF. Based
 
 Functional Dependency:
 
-{customer_id} -\>{ first_name , last_name , gender , email, mobile_no , street , city , country , postcode } {postcode} -\> { street, city , country }
+{customer_id} ->{ first_name , last_name , gender , email, mobile_no , street , city , country , postcode } {postcode} -> { street, city , country }
 
 This indicated that street, city, and country were transitively dependent on postcode. As a result, a new table is created as ADDRESS, which has postcode as a primary key and stores street, city, and country as other attributes.
 
 In summary, four new entities were created from the Normalisation, which were ORDER_DETAIL, ORDER_ITEM, DISCOUNT, and ADDRESS.
 
-#### Logical Schema \<update\>
+#### Logical Schema \<update>
 
 According to the E-R diagram and the normalization stage, we can list the logical schema as follows:
 
--   CUSTOMER([customer_ID]{.underline}, first_name, last_name, gender, email, mobile_no, street, city, country, postcode) 
+-   CUSTOMER([customer_ID]{.ul}, first_name, last_name, gender, email, mobile_no, street, city, country, postcode) 
 
 -   ADDRESS(
 
--   PRODUCT([product_ID]{.underline}, product_name, product_description, unit_price, stock_at_hand) 
+-   PRODUCT([product_ID]{.ul}, product_name, product_description, unit_price, stock_at_hand) 
 
--   ADVERTISEMENT([ad_id]{.underline}, ad_number, ad_place, ad_price, product_ID) 
+-   ADVERTISEMENT([ad_id]{.ul}, ad_number, ad_place, ad_price, product_ID) 
 
--   SUPPLIER([supplier_id]{.underline}, supplier_name, email, mobile_no) 
+-   SUPPLIER([supplier_id]{.ul}, supplier_name, email, mobile_no) 
 
--   CATEGORY([category_id,]{.underline} category_name, category_fee)
+-   CATEGORY([category_id,]{.ul} category_name, category_fee)
 
-#### Physical Schema \<update\>
+#### Physical Schema \<update>
 
 ```{r, echo=FALSE}
 
@@ -610,29 +610,32 @@ The imported data sets were validated before being added to the database to ensu
 
 ### Task 3.1: GitHub Repository and Workflow Setup
 
-We first created a new public repository on GitHub and created the following files:
+We first created a new public repository named **DM_Group3** on GitHub and created the following files:
 
-1.  README file to include all student ID numbers for our group.
-2.  database_schema file as a rmd. file to contain r code for creating a database and building the database schema.
-3.  data_validation_and_load file as a rmd. file to create code for validating data and loading the cleaned data into the database.
-4.  data_visualization file to perform data analysis and visualise essential results.
-5.  There are three folders, including data_upload to store 10 datasets generated by Mockaroo, images to store images attached to the quarto report, and figures to store figures generated by data visualization.
-6.  Report as a qmd. file to report the tasks and how they were done.
+1.  **README** file to include all student ID numbers of our group.
+2.  **database_schema** file to create a database and build the database schema.
+3.  **data_validation_and_load** file to create code for validating data and loading the cleaned data into the database.
+4.  **data_analysis** file to perform data analysis and visualise essential results.
+5.  two folders, named **data_upload** to store 10 datasets generated by Mockaroo, and **images** to store E-R diagrams.
+6.  **Report** as a qmd. file to report the tasks and how they were done.
 
 Secondly, we create a new project in RStudio and connect it to Git for version control to manage code in a local development environment, leading to easier tracking of changes, creating branches, merging code, etc.
 
-GitHub Actions can automate workflows, such as running tests, building, and deploying tasks after pushing code, which can improve development efficiency and ensure code stability. Therefore, we created the .github/workflows directory and an **etl.yaml** file within it.
+For setting up workflow, as GitHub Actions can automate workflows, such as running tests, building, and deploying tasks after pushing code, which can improve development efficiency and ensure code stability, we created the **.github/workflows** directory and an **etl.yaml** file within it.
 
 ### Task 3.2: Data Import and Quality Assurance
 
-Our GitHub Actions workflow was designed to execute a task named "ETL workflow for group 3.", triggering by push events to the ‘main’ branch. In this part, we defined a sequence of steps to be executed on the latest version of Ubuntu:
+Our GitHub Actions workflow was designed to execute a task named "ETL workflow for group 3.", triggering by pushing events to the 'main' branch. In this part, we defined a sequence of steps to be executed on the latest version of Ubuntu:
 
-1.  Checkout code: fetch the repository's code.
-2.  Set up the R environment and specify the R version as '4.3.3'.
-3.  Cache R packages: Caches R packages to avoid reinstalling them on each run.
-4.  Install packages: Installs required packages if the cache misses.
-5.  Execute RMD files: Executes for data loading tasks.
-6.  Push changes: utilizes an authentication token to push changes to the ‘main’ branch.
+1.  Use GitHub Actions checkout action to check out code into the working directory.
+2.  Set up R environment and specify the R version as '4.3.3'.
+3.  Cache R packages to avoid reinstalling them on each run.
+4.  Install required packages if the cache misses.
+5.  Delete the database file if it exists.
+6.  Run database_schema.Rmd to render database schema.
+7.  Run data_validation_and_load.Rmd to render validation and load data into database.
+8.  Run data_analysis.Rmd to render data analysis.
+9.  Utilize an authentication token to push changes to the 'main' branch.
 
 ## Part 4: Data Analysis and Reporting with Quarto in R
 
